# assignment3

./: .gitignore  CMakeLists.txt  README.md
outputFiles/: classified.csv
src/: CLI.cpp  CLI.hpp  CSVManagement.cpp  CSVManagement.hpp  ChebyshevDistance.cpp  ChebyshevDistance.hpp  DefaultIO.cpp  DefaultIO.hpp  Distance.cpp  Distance.hpp  EuclideanDistance.cpp  EuclideanDistance.hpp  KNearestNeighbors.cpp  KNearestNeighbors.hpp  ManhattanDistance.cpp  ManhattanDistance.hpp  Point.cpp  Point.hpp  SocketIO.cpp  SocketIO.hpp  StandardIO.cpp  StandardIO.hpp  TCPClient.cpp  TCPClient.hpp  TCPServer.cpp  TCPServer.hpp  fileHandler.cpp  fileHandler.hpp  main.cpp
src/Client/: Client.cpp
src/Commands/: Classifier.cpp  Classifier.hpp  Command.cpp  Command.hpp  ConfusionMatrix.cpp  ConfusionMatrix.hpp  DisplayResults.cpp  DisplayResults.hpp  DownloadResults.cpp  DownloadResults.hpp  KNNInstance.cpp  KNNInstance.hpp  UploadCSV.cpp  UploadCSV.hpp
src/Distance/: ChebyshevDistance.hpp  Distance.hpp  Distances.cpp  Distances.hpp  EuclideanDistance.cpp  ManhattanDistance.hpp
src/Server/: Server.cpp
